@@ -7,7 +7,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="RedisCachingProvider" connectionString="" providerName="DotNetNuke.Providers.RedisCachingProvider" />
+    <add name="RedisCachingProvider" connectionString="127.0.0.1:6379" providerName="DotNetNuke.Providers.RedisCachingProvider" />
   </connectionStrings>
   <appSettings>
   </appSettings>
@@ -24,7 +24,7 @@
         <add name="RedisCachingProvider" 
              type="DotNetNuke.Providers.RedisCachingProvider.RedisCachingProvider, DotNetNuke.Providers.RedisCachingProvider" 
              providerPath="~\Providers\CachingProviders\RedisCachingProvider\" 
-             silentMode="true" />
+             silentMode="false" />
       </providers>
     </caching>
   </dotnetnuke>
