@@ -4,3 +4,5 @@
 <p style="margin: 0"><b>Version 01.00.00</b></p>
 <p style="margin: 0">This caching provider allows to use a Redis cache server or cluster within DNN, using a hybrid approach mixing in-memory cache plus the shared
 Redis cache. Note that all the objects must be serializable.  If you try to insert an object that does not supports serialization, an exception will be thrown.</p>
+<p style="margin: 0"><b>Version 01.00.01</b></p>
+<p style="margin: 0">- Fixed an error causing serialization exceptions not being correctly logged</p>
